tests/03-typecheck/05-match-shadow.ref
tests/03-typecheck/05-match-shadow.stack:3:19, Semantic error: bind a is already defined
