tests/03-typecheck/05-match-shadow.stack
func shadow_test (int, int) (int) in
    match a b in
        a b match a c in
        end
    end
end
